nautilus asserts in nautilus_window_slot_get_location "self != NULL"
The bug has been reported on https://bugs.launchpad.net/ubuntu/+source/nautilus/+bug/1821435
' Package: nautilus 1:3.32.0-0ubuntu1
Copied a file from a server to ~/Documents and used the Star function. Got this crash two times with different files.
#0 __GI_raise (sig=sig@entry=6) at ../sysdeps/unix/sysv/linux/raise.c:50
set = {__val = {0, 94483651194176, 94483652931984, 139748437458080, 94483651194364, 2064, 129, 139748437457984, 18446744073709551304, 0, 2048, 139748436092324, 551135412224, 139748437458080, 139748437458080, 343597383792}}
pid = <optimized out>
tid = <optimized out>
ret = <optimized out>
#1 0x00007f19b7dd0535 in __GI_abort () at abort.c:79
save_stage = 1
act = {__sigaction_handler = {sa_handler = 0x7f19b8f5d81b, sa_sigaction = 0x7f19b8f5d81b}, sa_mask = {__val = {140720308486145, 0, 108, 94483652290960, 6902038390424715264, 94483633456752, 139748454243710, 139748454051085, 94482905169920, 94483652290960, 0, 0, 6902038390424715264, 94483630757153, 94483652290960, 109}}, sa_flags = -1191346688, sa_restorer = 0x7ffc523ba850}
sigs = {__val = {32, 0 <repeats 15 times>}}
#2 0x00007f19b8ed3dc3 in g_assertion_message (domain=<optimized out>, file=<optimized out>, line=<optimized out>, func=0x55eeaf3fa2c0 <__FUNCTION__.63830> "nautilus_window_slot_get_location", message=<optimized out>) at ../../../glib/gtestutils.c:2878
lstr = "3270\000\177\000\000\000\300_\367X\367\310_\200\250;R\374\177\000\000\024\225?\257\356U\000"
s = 0x55eeb0882990 ""
#3 0x00007f19b8f2ebfa in g_assertion_message_expr (domain=0x0, file=file@entry=0x55eeaf3f9521 "../src/nautilus-window-slot.c", line=line@entry=3270, func=func@entry=0x55eeaf3fa2c0 <__FUNCTION__.63830> "nautilus_window_slot_get_location", expr=expr@entry=0x55eeaf3f9514 "self != NULL") at ../../../glib/gtestutils.c:2904
s = 0x55eeb05abe10 "assertion failed: (self != NULL)"
#4 0x000055eeaf33cebb in nautilus_window_slot_get_location (self=0x0) at ../src/nautilus-window-slot.c:3270
priv = <optimized out>
priv = <optimized out>
__FUNCTION__ = "nautilus_window_slot_get_location"
_g_boolean_var_ = <optimized out>
#5 nautilus_window_slot_get_location (self=<optimized out>) at ../src/nautilus-window-slot.c:3266
priv = <optimized out>
__FUNCTION__ = "nautilus_window_slot_get_location"
_g_boolean_var_ = <optimized out>
#6 0x000055eeaf3431e8 in nautilus_window_on_undo_changed (manager=<optimized out>, window=0x55eeaffd43d0) at ../src/nautilus-window.c:1672
active_slot = <optimized out>
location = <optimized out>
popup_notification = 0
label = 0x0
undo_info = 0x55eeb0182430
state = <optimized out>
#7 0x00007f19b82a7e7d in g_closure_invoke (closure=0x55eeb04c68c0, return_value=0x0, n_param_values=1, param_values=0x7ffc523baae0, invocation_hint=0x7ffc523baa60) at ../../../gobject/gclosure.c:810
marshal = 0x7f19b82a9e50 <g_cclosure_marshal_VOID__VOID>
marshal_data = 0x0
in_marshal = 0
real_closure = 0x55eeb04c68a0
__FUNCTION__ = "g_closure_invoke"
#8 0x00007f19b82bb034 in signal_emit_unlocked_R (node=node@entry=0x55eeaf697e90, detail=detail@entry=0, instance=instance@entry=0x55eeaf68e400, emission_return=emission_return@entry=0x0, instance_and_params=instance_and_params@entry=0x7ffc523baae0) at ../../../gobject/gsignal.c:3705
tmp = <optimized out>
handler = 0x55eeb04c6d40
accumulator = 0x0
emission = {next = 0x0, instance = 0x55eeaf68e400, ihint = {signal_id = 16, detail = 0, run_type = G_SIGNAL_RUN_LAST}, state = EMISSION_RUN, chain_type = 4}
class_closure = 0x0
hlist = <optimized out>
handler_list = <optimized out>
return_accu = 0x0
accu = {g_type = 0, data = {{v_int = 0, v_uint = 0, v_long = 0, v_ulong = 0, v_int64 = 0, v_uint64 = 0, v_float = 0, v_double = 0, v_pointer = 0x0}, {v_int = 0, v_uint = 0, v_long = 0, v_ulong = 0, v_int64 = 0, v_uint64 = 0, v_float = 0, v_double = 0, v_pointer = 0x0}}}
signal_id = 16
max_sequential_handler_number = 50166
return_value_altered = 1
#9 0x00007f19b82c446e in g_signal_emit_valist (instance=<optimized out>, signal_id=<optimized out>, detail=<optimized out>, var_args=var_args@entry=0x7ffc523bac90) at ../../../gobject/gsignal.c:3391
instance_and_params = 0x7ffc523baae0
signal_return_type = <optimized out>
param_values = 0x7ffc523baaf8
node = <optimized out>
i = <optimized out>
n_params = <optimized out>
__FUNCTION__ = "g_signal_emit_valist"
#10 0x00007f19b82c4b2f in g_signal_emit (instance=<optimized out>, signal_id=<optimized out>, detail=detail@entry=0) at ../../../gobject/gsignal.c:3447
var_args = {{gp_offset = 24, fp_offset = 48, overflow_arg_area = 0x7ffc523bad70, reg_save_area = 0x7ffc523bacb0}}
#11 0x000055eeaf37c84f in nautilus_file_undo_manager_set_action (info=info@entry=0x55eeb0182430) at ../src/nautilus-file-undo-manager.c:245
__FUNCTION__ = "nautilus_file_undo_manager_set_action"
#12 0x000055eeaf37f1f7 in on_update_callback (object=<optimized out>, result=<optimized out>, user_data=user_data@entry=0x55eeb0715360) at ../src/nautilus-tag-manager.c:280
undo_info = 0x55eeb0182430
connection = <optimized out>
error = 0x0
data = 0x55eeb0715360
id = <optimized out>
l = <optimized out>
uri = <optimized out>
#13 0x00007f19b8397059 in g_task_return_now (task=0x7f197c014c90) at ../../../gio/gtask.c:1209
No locals.
#14 0x00007f19b8397b73 in g_task_return (task=0x7f197c014c90, type=<optimized out>) at ../../../gio/gtask.c:1278
source = 0x7f19a400e230
#15 0x00007f19b83980ec in g_task_return (type=G_TASK_RETURN_SUCCESS, task=<optimized out>) at ../../../gio/gtask.c:1678
source = <optimized out>
source = <optimized out>
#16 g_task_return_pointer (task=<optimized out>, result=<optimized out>, result_destroy=<optimized out>) at ../../../gio/gtask.c:1683
__FUNCTION__ = "g_task_return_pointer"
#17 0x00007f19b808cd4a in tracker_sparql_backend_real_update_async_co (_data_=0x55eeb0585d80) at tracker-backend.vala:104
__FUNCTION__ = "tracker_sparql_backend_real_update_async_co"
#18 0x00007f19b8397059 in g_task_return_now (task=0x7f199400abd0) at ../../../gio/gtask.c:1209
No locals.
#19 0x00007f19b8397b73 in g_task_return (task=0x7f199400abd0, type=<optimized out>) at ../../../gio/gtask.c:1278
source = 0x7f19a400e230
#20 0x00007f19b83980ec in g_task_return (type=G_TASK_RETURN_SUCCESS, task=<optimized out>) at ../../../gio/gtask.c:1678
source = <optimized out>
source = <optimized out>
#21 g_task_return_pointer (task=<optimized out>, result=<optimized out>, result_destroy=<optimized out>) at ../../../gio/gtask.c:1683
__FUNCTION__ = "g_task_return_pointer"
#22 0x00007f19b809b495 in tracker_bus_connection_real_update_async_co (_data_=0x55eeb01552f0) at tracker-bus.vala:150
__FUNCTION__ = "tracker_bus_connection_real_update_async_co"
#23 0x00007f19b8397059 in g_task_return_now (task=0x55eeb039f190) at ../../../gio/gtask.c:1209
No locals.
#24 0x00007f19b8397099 in complete_in_idle_cb (task=0x55eeb039f190) at ../../../gio/gtask.c:1223
No locals.
#25 0x00007f19b8f06958 in g_main_dispatch (context=0x55eeaf6abbd0) at ../../../glib/gmain.c:3189
dispatch = 0x7f19b8f03280 <g_idle_dispatch>
prev_source = 0x0
was_in_call = 0
user_data = 0x55eeb039f190
callback = 0x7f19b8397090 <complete_in_idle_cb>
cb_funcs = <optimized out>
cb_data = 0x7f19a4028ce0
need_destroy = <optimized out>
source = 0x7f19a400e230
current = 0x55eeaf6b7550
i = 0
current = <optimized out>
i = <optimized out>
__FUNCTION__ = "g_main_dispatch"
source = <optimized out>
_g_boolean_var_ = <optimized out>
was_in_call = <optimized out>
user_data = <optimized out>
callback = <optimized out>
cb_funcs = <optimized out>
cb_data = <optimized out>
need_destroy = <optimized out>
dispatch = <optimized out>
prev_source = <optimized out>
_g_boolean_var_ = <optimized out>
#26 g_main_context_dispatch (context=context@entry=0x55eeaf6abbd0) at ../../../glib/gmain.c:3854
No locals.
#27 0x00007f19b8f06d48 in g_main_context_iterate (context=context@entry=0x55eeaf6abbd0, block=block@entry=1, dispatch=dispatch@entry=1, self=<optimized out>) at ../../../glib/gmain.c:3927
max_priority = 0
timeout = 0
some_ready = 1
nfds = <optimized out>
allocated_nfds = 4
fds = 0x55eeaff654f0
#28 0x00007f19b8f06ddc in g_main_context_iteration (context=context@entry=0x55eeaf6abbd0, may_block=may_block@entry=1) at ../../../glib/gmain.c:3988
retval = <optimized out>
#29 0x00007f19b83c38bd in g_application_run (application=0x55eeaf696140, argc=<optimized out>, argv=0x7ffc523bb118) at ../../../gio/gapplication.c:2516
arguments = 0x55eeaf6956e0
status = 0
context = 0x55eeaf6abbd0
acquired_context = 1
__FUNCTION__ = "g_application_run"
#30 0x000055eeaf329907 in main (argc=2, argv=0x7ffc523bb118) at ../src/nautilus-main.c:81
retval = <optimized out>
application = 0x55eeaf696140