window-slot: Change assert inside nautilus_window_slot_get_location

Closes https://gitlab.gnome.org/GNOME/nautilus/issues/970