src/nautilus-window-slot.c
@@ -3266,7 +3266,7 @@ nautilus_window_slot_get_location (NautilusWindowSlot *self)
 {
     NautilusWindowSlotPrivate *priv;
 
-    g_assert (self != NULL);
+    g_return_val_if_fail (NAUTILUS_IS_WINDOW_SLOT (self), NULL);
 
     priv = nautilus_window_slot_get_instance_private (self);
 
